--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "management",
   "version": "0.1.0",
-  "proxy": "http://localhost:3001",
+  "proxy": "https://dark-lime-moth-wear.cyclic.app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
